prevent invisible modal from blocking page content

--- a/angular_example/app/styles/main.scss
+++ b/angular_example/app/styles/main.scss
@@ -177,3 +177,7 @@ tbody {
 #obs-details-table {
     margin-bottom: 0 !important;
 }
+
+#surveyModal {
+    display: none;
+}
